feat: homeBg fot BannerHome

--- a/components/organism/BannerHome.module.scss
+++ b/components/organism/BannerHome.module.scss
@@ -1,5 +1,5 @@
 .background{
-    background-image: url('./../../public/images/AdobeStock_576614450_Preview.jpeg');
+    background-image: url('./../../public/images/homeBg.jpeg');
     background-size: cover;
     width: 100vw;
     height: 100vh;
