--- a/components/organism/BannerHome.module.scss
+++ b/components/organism/BannerHome.module.scss
@@ -1,5 +1,5 @@
 .background{
-    background-image: url('./../../public/images/homeBg.jpeg');
+    background-image: url('./../../public/images/hestiaAnimationBg.jpeg');
     background-size: cover;
     width: 100vw;
     height: 100vh;
@@ -14,15 +14,11 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: linear-gradient(to bottom, rgb(0, 0, 0) 0%, rgba(0, 0, 0) 100%);
+        background-color: white;
         opacity: 1;
-        animation: fadeOut 1s ease-in-out 0.5s forwards;
+        animation: fadeOut 1.5s ease-in-out forwards;
         z-index: -1;
       }
-}
-
-#body {
-    background-color: #000000;
 }
 
 .canvas {
@@ -36,7 +32,7 @@
 }
 
 .canvas_anim {
-    animation: fadeIn 2s ease-in-out 0.5s forwards;
+    animation: fadeIn 2s ease-in-out forwards;
     opacity: 0;
 }
 
