feat: header & highlight

--- a/pages/pages.module.scss
+++ b/pages/pages.module.scss
@@ -1,5 +1,6 @@
-#body {
-    background-color: #000000;
-    width: 100vw;
-    height: 100vh;
+.ctaContact{
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    margin: auto;
 }
