--- a/components/atom/Titles/Titles.module.scss
+++ b/components/atom/Titles/Titles.module.scss
@@ -28,10 +28,10 @@
 }
 
 .animateTitle {
-    animation: appearTitles 1s ease-in-out forwards;
+    animation: slideTitles 2.5s ease-in-out forwards;
 }
 
-@keyframes appearTitles {
+@keyframes slideTitles {
     from {
       transform: translateY(45vh);
     }
