--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,3 +4,11 @@ body, h1, h2 {
     margin: unset;
 }
 
+body{
+    background-color: #f6f6f6;
+}
+
+h1, h2, h3 {
+    font-family: 'Marcellus SC', serif;
+}
+
