--- a/components/organism/BannerHome/BannerHome.module.scss
+++ b/components/organism/BannerHome/BannerHome.module.scss
@@ -2,7 +2,7 @@
     background-image: radial-gradient(circle at center, rgb(27, 26, 19), black);
     background-size: cover;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     z-index: -1;
     position: fixed;
     top: 0;
@@ -23,7 +23,7 @@
 
 .canvas {
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     margin: auto;
 }
 
