--- a/components/organism/Header/Header.module.scss
+++ b/components/organism/Header/Header.module.scss
@@ -1,17 +1,22 @@
 .headerWrapper{
     position: fixed;
-    top: 3vh;
+    top: 0;
     width: 100%;
     padding: 10px 30px;
-    background-image: linear-gradient(to right, #f6f6f6, #FFFFFF, #ffffff, #ffffff, #f6f6f6);
+    background-image: linear-gradient(to right, #0e0e0e,black, black, #181818);
     box-shadow: #121212c4 0px 0px 3px 0px;
     z-index: 1;
 
     a {
         padding-right: 30px;
         font-family: 'Marcellus SC', serif;
-        color: black;
+        color: white;
         font-size: 1.2rem;
         text-decoration: none;
+    }
+
+    .button{
+        background-color: white;
+        color: black;
     }
 }
