--- a/components/atom/LanguageNav/LanguageNav.module.scss
+++ b/components/atom/LanguageNav/LanguageNav.module.scss
@@ -2,7 +2,7 @@
     background-color: transparent !important;
     color: white;
     box-shadow: none !important;
-    padding: 0;
+    padding: 0 !important;
 
 
     &::after{
@@ -26,4 +26,8 @@
     z-index: -1 !important;
     border: none !important;
     border-radius: 0 !important;
+
+    a span{
+        font-family: 'Marcellus SC', serif;
+    }
 }
