fix: fix navbar and style

--- a/components/atom/MobileNav/MobileNav.module.scss
+++ b/components/atom/MobileNav/MobileNav.module.scss
@@ -24,4 +24,8 @@
     z-index: -1 !important;
     border: none !important;
     border-radius: 0 !important;
+
+    a {
+        padding-bottom: 30px;
+    }
 }
