--- a/components/organism/BannerHome/BannerHome.module.scss
+++ b/components/organism/BannerHome/BannerHome.module.scss
@@ -1,7 +1,6 @@
 .background{
-    background-image: url('https://res.cloudinary.com/djlwtz7qw/image/upload/v1688105658/background_dalnbr.webp');
+    background-image: radial-gradient(circle at center, black, rgb(27, 26, 19), black);
     background-size: cover;
-    background-position: center;
     width: 100vw;
     height: 100vh;
     z-index: -1;
@@ -20,6 +19,7 @@
 }
 
 .canvas_anim {
+    animation: fadeIn 1s ease-in-out forwards;
     opacity: 0;
 }
 
