chore: update bg picture

--- a/components/organism/BannerHome/BannerHome.module.scss
+++ b/components/organism/BannerHome/BannerHome.module.scss
@@ -1,5 +1,5 @@
 .background{
-    background-image: radial-gradient(circle at center, black, rgb(27, 26, 19), black);
+    background-image: url('https://res.cloudinary.com/djlwtz7qw/image/upload/c_scale,h_1146/v1688105658/background_dalnbr.webp');
     background-size: cover;
     width: 100vw;
     height: 100vh;
