--- a/components/organism/BannerHome/BannerHome.module.scss
+++ b/components/organism/BannerHome/BannerHome.module.scss
@@ -1,6 +1,7 @@
 .background{
     background-image: url('https://res.cloudinary.com/djlwtz7qw/image/upload/c_scale,h_1146/v1688105658/background_dalnbr.webp');
     background-size: cover;
+    background-position: center;
     width: 100vw;
     height: 100vh;
     z-index: -1;
