--- a/styles/customBootstrap.scss
+++ b/styles/customBootstrap.scss
@@ -22,7 +22,7 @@
 }
 
 .card-footer{
-    background-color: black;
+    background-color: #3c280f;
     color: white;
     text-align: center;
     border-radius: 0;
