--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -6,6 +6,9 @@
   @mixin for-tablet-portrait-up {
     @media (min-width: 600px) { @content; }
   }
+  @mixin for-tablet-only {
+    @media (min-width: 767px ) and (max-width: 992px) { @content; }
+  }
   @mixin for-tablet-landscape-up {
     @media (min-width: 900px) { @content; }
   }
