--- a/components/atom/Button/Button.module.scss
+++ b/components/atom/Button/Button.module.scss
@@ -8,13 +8,16 @@
     a {
         text-decoration: none;
         color: black;
+        transition: all 1s;
     }
 
     &:hover{
-        transform: scale(1.2);
-        background-color: white;
-        color: black;
+        background-color: black;
         border: solid 1px white;
+        
+        a{
+            color: white;
+        }
     }
 }
 
@@ -27,11 +30,15 @@
     a {
         text-decoration: none;
         color: white;
+        transition: all 1s;
     }
 
     &:hover{
-        transform: scale(1.2);
-        background-color: black;
-        border: solid 1px white;
+        background-color:white;
+        border: solid 1px black;
+        
+        a{
+            color: black;
+        }
     }
 }
