--- a/components/atom/CardOnlyImage/CardOnlyImage.module.scss
+++ b/components/atom/CardOnlyImage/CardOnlyImage.module.scss
@@ -23,12 +23,14 @@
     }
 
     .cardOverlay{
-        background-color: rgba(0, 0, 0, 0.3);
+        background-color: rgba(0, 0, 0, 0.5);
         transition: all 0.5s ease-in-out;
+        text-align: center;
+        font-family: unset !important;
     
         &:hover{
             background-color: transparent;
-            background-color: rgba(0, 0, 0, 0.5);
+            background-color: rgba(0, 0, 0, 0.3);
         }
 
         .cardOverlay_align{
