--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -3,3 +3,5 @@ $breakpoint-small: 576px;
 $breakpoint-medium: 768px;
 $breakpoint-large: 1024px;
 $breakpoint-extra-large: 1300px;
+
+$colorGrey: #c5c5c5;
