--- a/components/organism/BannerImage/BannerImage.module.scss
+++ b/components/organism/BannerImage/BannerImage.module.scss
@@ -2,6 +2,7 @@
     width: 100vw;
     box-shadow: #121212c4 0px 0px 3px 0px;
     position: relative;
+    background-size: cover;
 
     &::after{
         content: "";
@@ -10,7 +11,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: rgba(0, 0, 0, 0.78);
+        background: rgba(0, 0, 0, 0.4);
     }
 }
 
