--- a/components/organism/Carousel/CarouselComponent.module.scss
+++ b/components/organism/Carousel/CarouselComponent.module.scss
@@ -1,18 +1,23 @@
 @use './../../../styles/variables.scss';
+@import './../../../styles/mixins.scss';
 
 .item{
-    height: 50vh;
+    height: 60vh;
 
     &:hover .caption{
-        color: white;
+        background: rgba(0, 0, 0, 0.2); 
     }
 
     .caption{
-        color: variables.$colorGrey;
-        transition: all 0.5s ease;  
+        color: white;
+        transition: all 0.5s ease;
+        background: rgba(0, 0, 0, 0.4);
+        padding: 20px;
     }
 
     .image{
+        height: 100%;
+
         &::after{
             content: "";
             position: absolute;
@@ -20,9 +25,19 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.4);
+            background: rgba(0, 0, 0, 0);
             transition: all 0.5s ease;
-        } 
+        }
+
+        img{
+            min-width: 100%;
+            width: auto !important;
+            min-height: 100%;
+        }
+
+        @include for-phone-only {    
+            transform: translateX(-25vw); 
+        }
     }
 
     &:hover .image::after{
