--- a/components/organism/BulletPoints/BulletPoints.module.scss
+++ b/components/organism/BulletPoints/BulletPoints.module.scss
@@ -3,6 +3,7 @@
     height: 10rem;
     width: 10rem;
     background-size: cover;
+    background-position: center;
     margin:auto;
     box-shadow: #121212c4 0px 0px 3px 0px;
 }
