--- a/components/atom/Button/Button.module.scss
+++ b/components/atom/Button/Button.module.scss
@@ -1,7 +1,7 @@
 .clearBtn {
     background-color: white;
     color: black;
-    border: solid 1px white;
+    border: solid 2px white;
     min-width: 200px;
     transition: all 1s;
 
@@ -13,7 +13,7 @@
 
     &:hover{
         background-color: black;
-        border: solid 1px white;
+        border: solid 2px white;
         
         a{
             color: white;
@@ -23,9 +23,11 @@
 
 .darkBtn{
     background-color: black;
-    border: solid 1px white;
+    border: solid 2px white;
     min-width: 200px;
     transition: all 1s;
+    padding: 5px 10px;
+    font-size: 1.2rem;
 
     a {
         text-decoration: none;
@@ -35,7 +37,7 @@
 
     &:hover{
         background-color:white;
-        border: solid 1px black;
+        border: solid 2px black;
         
         a{
             color: black;
