--- a/components/atom/CardOnlyImage/CardOnlyImage.module.scss
+++ b/components/atom/CardOnlyImage/CardOnlyImage.module.scss
@@ -20,6 +20,9 @@
 
     .cardImg{
         border-radius: 0;
+        height:100%;
+        min-height: 270px;
+        object-fit: cover;
     }
 
     .cardOverlay{
