feat: slug pages articles

--- a/components/organism/CookieModale/CookieModale.module.scss
+++ b/components/organism/CookieModale/CookieModale.module.scss
@@ -48,11 +48,14 @@
 
 .buttonAccept{
     background-color: white;
+    color: black;
     border: solid white 2px;
+    padding: 5px 10px;
 }
 
 .buttonRefuse{
     background-color: transparent;
     border: solid white 2px;
+    padding: 5px 10px;
     color: white;
 }
