--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,5 @@
 @import "./customBootstrap.scss";
-@import url(//fonts.googleapis.com/css2?family=Marcellus+SC&family=Quicksand&family=Diphylleia&display=swap);
+@import url('https://fonts.googleapis.com/css2?family=Marcellus+SC&family=Quicksand&family=Diphylleia&display=swap');
 
 h1, h2 {
     margin: unset;
