--- a/components/organism/BannerImage/BannerImage.module.scss
+++ b/components/organism/BannerImage/BannerImage.module.scss
@@ -3,6 +3,7 @@
     box-shadow: #121212c4 0px 0px 3px 0px;
     position: relative;
     background-size: cover;
+    background-position: center;
 
     &::after{
         content: "";
