feat: design refinement

--- a/components/organism/BannerTextImage/BannerTextImage.module.scss
+++ b/components/organism/BannerTextImage/BannerTextImage.module.scss
@@ -20,6 +20,10 @@
         color: #FFFFFF;
         padding: 5px 30px;
         background-color: #000000;
+
+        &:active, :focus{
+            background-color: #000000;
+        }
     }
 }
 
