fix: add legal pages

--- a/components/organism/CookieModale/CookieModale.module.scss
+++ b/components/organism/CookieModale/CookieModale.module.scss
@@ -1,5 +1,9 @@
 @use './../../../styles/variables.scss';
 
+body:has(.modaleDisplayed) {
+    position: fixed;
+}
+
 .mask{
     position: fixed;
     height: 100vh;
