fix: font for all website title and links

--- a/components/atom/Titles/Titles.module.scss
+++ b/components/atom/Titles/Titles.module.scss
@@ -8,6 +8,7 @@
     text-align: center;
     color:white;
     text-shadow: #000 1px 0 20px, #000 1px 0 20px, #000 1px 0 20px, #000 1px 0 20px;
+    font-family: 'Diphylleia', serif;
 }
 
 .titlePresentation{
