--- a/components/organism/BannerTextImage/BannerTextImage.module.scss
+++ b/components/organism/BannerTextImage/BannerTextImage.module.scss
@@ -20,9 +20,15 @@
         color: #FFFFFF;
         padding: 5px 30px;
         background-color: #000000;
+        transition: all 0.5s ease-in-out;
 
         &:active, :focus{
             background-color: #000000;
+        }
+
+        &:hover {
+            background-color: #464646;
+            transition: all 0.5s ease-in-out;
         }
     }
 }
@@ -35,7 +41,15 @@
 
     .button{
         background-color: white;
+        padding: 5px 30px;
         color: black;
+        transition: all 0.5s ease-in-out;
+
+        &:hover {
+            background-color: #000000;
+            color: white;
+            transition: all 0.5s ease-in-out;
+        }
     }
 }
 
