--- a/components/organism/Header/Header.module.scss
+++ b/components/organism/Header/Header.module.scss
@@ -5,7 +5,8 @@
     top: 0;
     width: 100%;
     z-index: 2;
-    background-image: linear-gradient(#1d1d1d, #000000, #000000, #000000, #181818);
+    background-image: linear-gradient(#1d1d1d, #000000, #000000, #000000, #000000);
+    box-shadow: #727272 0px 0px 9px 0px;
     padding: 15px 0;
 
     a {
