fix: update the header

--- a/components/organism/Header/Header.module.scss
+++ b/components/organism/Header/Header.module.scss
@@ -30,8 +30,15 @@
     .menuDesktop{
         opacity: 0;
         animation: appears 0.5s ease-in-out forwards;
+        display: flex;
 
-        a:not(:last-child) {
+        .toggleDropdown{
+            background-color: transparent;
+            padding: 0;
+            vertical-align: top;
+        }
+
+        a:not(:last-child), .toggleDropdown {
             padding: 0 15px;
             font-family: 'Marcellus SC', serif;
             color: white;
@@ -46,11 +53,28 @@
                 font-size: 1.2rem; 
             }
         }
+
+        .menuDropdown {
+            background-color: #2c2b2b;
+            font-family: 'Marcellus SC', serif;
+            width: 200px;
+            margin-top: 8px;
+
+            a {
+                display: block;
+                width: 100%;
+                padding: 10px 15px 10px 15px;
+            }
+        }
     }
 
     .button{
         background-color: white;
         color: black;
+    }
+
+    .downArrow{
+        font-size: 0.5rem;
     }
 
     .logo{
